<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".CreateTable">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ProName"/>

        <Spinner
            android:id="@+id/id_Spinner"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/id_txt_quatity"
            android:text="@string/TableQuatity"/>

        <EditText
            android:id="@+id/id_create_quantity"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:inputType="number"
            android:text="1"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/TableStatus"/>

        <EditText
            android:id="@+id/id_create_status"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Is Using"
            android:enabled="false"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Sum"/>

        <EditText
            android:enabled="false"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_create_sum"
            />

    </LinearLayout>


    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_btn_Completely"
        android:id="@+id/id_btn_commpletely"/>

</LinearLayout>