<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".InformationTable">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colortitle"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/title_Table"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="13dp">
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ProName"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/TableQuatity"/>
        <TextView
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/TableStatus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/id_detailIn_table_name"/>
        <TextView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/id_detailIn_table_quatity"/>
        <TextView
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/id_detailIn_table_status"/>

    </LinearLayout>
</LinearLayout>