<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProduct">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add New Product"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor=" #8cff66"
        android:background="@color/colortitle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ProName"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorName"/>
        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProName"
            android:id="@+id/id_add_Name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ProCode"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorCode"/>
        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProCode"
            android:id="@+id/id_add_Code"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ProCost"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProCost"
            android:id="@+id/id_add_Cost"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Name_btn_Save"
        android:layout_gravity="center"
        android:id="@+id/id_btn_SAVE"/>
</LinearLayout>